# portfolio-template

./: LICENSE  README.md  pyproject.toml
source/: conf.py  index.rst  projects.rst
source/projects/: sample_project.rst
