[tool.poetry]
name = "portfolio"
version = "0.0.1"
description = "My portfolio"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
sphinx = "^8.0.2"
pydata-sphinx-theme = "^0.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"